# activation-web-app

./: .gitignore  LICENSE  README.md  app.py  main.py  pyproject.toml
templates/: index.html
