[project]
name = "ai-web-app"
version = "0.1.0"
description = "Activation Function Visualizer - A Flask web app for exploring neural network activation functions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "numpy",
    "matplotlib",
    "python-dotenv>=1.1.1",
    "google-genai>=1.32.0",
]
